--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -69,7 +69,7 @@
                                 <h:panelGrid columns="6" cellspacing="0">
                                     
                                     <p:selectOneButton id="Combobox1" value="#{indexController.rechIndex}">
-                                         <f:selectItem itemLabel="Hôtels et RnB" itemValue="htlRech" />
+                                         <f:selectItem itemLabel="Hôtels et AirBnB" itemValue="htlRech" />
                                          <f:selectItem itemLabel="Agences" itemValue="agcRech" />
                                          
                                          <p:ajax event="change" update=":form" listener="#{indexController.procedRech}" />
